# acetylate-poc

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
example/: test.poc.json  v1.poc-schema.json5
example/exploits/: CVE-2022-31814.py  CVE-2024-3400.py  CVE-2024-36991.py  CVE-2024-4040.py  CVE-2024-7120.py  CVE-2024-8353.py
src/: __init__.py
src/acetylate_poc/: __init__.py
src/acetylate_poc/apis/: __init__.py  fofa_api.py
src/acetylate_poc/automatic/: main.py  vulbox.py
src/acetylate_poc/schemas/: __init__.py  cli_args.py  http_request.py  payload.py  poc_schema.py  target.py
src/acetylate_poc/targets/: __init__.py  api_box.py
src/acetylate_poc/targets/api/: __init__.py
src/acetylate_poc/targets/apis/: __init__.py  fofa_api.py  info_api.py
src/acetylate_poc/utils/: fetch.py  manage.py  requester.py  script.py  server.py  task_framework.py  validators.py
tests/: test.py  test_apis.py  test_utils.py
