[project]
name = "acetylate-poc"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "D7x7z49", email = "85430783+D7x7z49@users.noreply.github.com"},
]
dependencies = [
    "requests>=2.32.3",
    "pydantic>=2.9.1",
    "pandas>=2.2.3",
    "httpx>=0.27.2",
    "fake-useragent>=1.5.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.6.5",
]


[tool.pdm.scripts]
lint = "ruff check"
format = "ruff format"