[project]
name = "acetylate-poc"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "D7x7z49", email = "85430783+D7x7z49@users.noreply.github.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "commitizen>=4.1.0",
    "pre-commit>=4.0.1",
    "black>=24.10.0",
    "isort>=5.13.2",
    "flake8>=7.1.1",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ["py312"]
